k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
    version: blue   # 👈 ACTIVE VERSION
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
